@@ -1,0 +1,13 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'Css/Documentation.css')}" />
+</head>
+<body>
+
+<div id="book">
+	<f:image src="EXT:sphinx/Resources/Public/Images/book.png" alt="" />
+</div>
+
+</body>
+</html>
