@@ -1,0 +1,7 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Frameset//EN" "http://www.w3.org/TR/REC-html40/frameset.dtd">
+<html>
+<frameset rows="30,*" frameborder="no" framespacing="0" border="0">
+	<frame src="{f:uri.action(action:'menu')}" frameborder="0" noresize="noresize" scrolling="no" />
+	<frame name="viewer" src="{f:uri.action(action:'blank')}" frameborder="0" noresize="noresize" />
+</frameset>
+</html>
