@@ -1,0 +1,24 @@
+{namespace s=Causal\Sphinx\ViewHelpers}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'Css/Documentation.css')}" />
+</head>
+<body>
+
+<s:form action="render" target="viewer">
+	<label for="extension">
+		<f:translate key="showExtensionDocumentation">Show documentation of extension:</f:translate>
+	</label>
+	<s:form.select id="extension" name="extension" options="{extensions}" onchange="this.form.submit();">
+		<option value=""></option>
+	</s:form.select>
+	<f:form.submit value="{f:translate(key:'loadDocumentation')}" />
+	<div class="right">
+		<f:form.checkbox id="force" name="force" value="1" />
+		<label for="force"><f:translate key="alwaysRender">Always render documentation</f:translate></label>
+	</div>
+</s:form>
+
+</body>
+</html>
