@@ -1,15 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-		"http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-	<title>No Extension</title>
-	<link rel="stylesheet" type="text/css" href="../Css/Documentation.css" />
-</head>
-<body>
-
-<div id="book">
-	<img src="../Images/book.png" alt="" />
-</div>
-
-</body>
-</html>
