@@ -7,8 +7,20 @@ if (TYPO3_MODE === 'BE') {
 	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addModulePath('file_txsphinxM1', \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($_EXTKEY) . 'Classes/Controller/mod1');
 	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addModule('file', 'txsphinxM1', '', \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($_EXTKEY) . 'Classes/Controller/mod1/');
 
-	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addModulePath('help_txsphinxM2', \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($_EXTKEY) . 'Classes/Controller/mod2');
-	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addModule('help', 'txsphinxM2', 'top', \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($_EXTKEY) . 'Classes/Controller/mod2/');
+	\TYPO3\CMS\Extbase\Utility\ExtensionUtility::registerModule(
+		'Causal.' . $_EXTKEY,
+		'help',
+		'documentation',
+		'top',
+		array(
+			'Documentation' => 'index,menu,blank,render',
+		),
+		array(
+			'access' => 'user,group',
+			'icon' => 'EXT:' . $_EXTKEY . '/ext_icon.gif',
+			'labels' => 'LLL:EXT:' . $_EXTKEY . '/Resources/Private/Language/locallang_mod_documentation.xlf',
+		)
+	);
 }
 
 ?>
